# statsbomb-sandbox

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
data/reference/: euro-competition-object.json
power-bi/: Euro2024.pbip  Euro2024.pbix
power-bi/Euro2024.Report/: .platform  definition.pbir
power-bi/Euro2024.Report/.pbi/: localSettings.json
power-bi/Euro2024.Report/definition/pages/: pages.json
power-bi/Euro2024.Report/definition/pages/a543c22210cc2dcb8b7c/: page.json
power-bi/Euro2024.Report/definition/pages/a543c22210cc2dcb8b7c/visuals/0570b27a831e060e1126/: visual.json
power-bi/Euro2024.Report/definition/pages/a543c22210cc2dcb8b7c/visuals/0ad8318bdc4e4be9b4b0/: visual.json
power-bi/Euro2024.Report/definition/pages/a543c22210cc2dcb8b7c/visuals/8130a0dd23eeaca0650e/: visual.json
power-bi/Euro2024.Report/definition/pages/a543c22210cc2dcb8b7c/visuals/bc35a8891cbb964c0ed4/: visual.json
power-bi/Euro2024.Report/definition/pages/a543c22210cc2dcb8b7c/visuals/da1478921dc864dd13a3/: visual.json
power-bi/Euro2024.SemanticModel/: .platform  diagramLayout.json
power-bi/Euro2024.SemanticModel/.pbi/: cache.abf  localSettings.json
power-bi/Euro2024.SemanticModel/definition/: expressions.tmdl  model.tmdl  relationships.tmdl
power-bi/Euro2024.SemanticModel/definition/cultures/: en-US.tmdl
power-bi/Euro2024.SemanticModel/definition/tables/: DimMatch.tmdl  DimTeam.tmdl  FactShot.tmdl  FactTeamMatch.tmdl
research/: download_euro_2024.py  profile_euro_2024.ipynb  source_config.json
