[project]
name = "statsbomb-euro-2024-analysis"
version = "0.1.0"
description = "A small Euro 2024 Power BI portfolio build using pinned StatsBomb Open Data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "pandas>=2.2,<3",
    "pyarrow>=16,<24",
]

[dependency-groups]
dev = [
    "ruff>=0.12,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [".private", "data"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
